fix: optimize log code